package com.bogdan.kolomiiets.tasks.Task_09_Game21;

public interface Gamers {

}
