package com.bogdan.kolomiiets.tasks.Task_09_Game21;

public enum PlayingCards {
    JACK,
    QUEEN,
    KING,
    SIX,
    SEVEN,
    EIGHT,
    NINE,
    TEN,
    ACE,
}
