@startuml

title __TASK_09_GAME21's Class Diagram__\n

  package com.bogdan.kolomiiets.tasks {
    package com.bogdan.kolomiiets.tasks.Task_09_Game21 {
      class CardDeck {
          ~ playingCardDeck : List<PlayingCards>
          + CardDeck()
          - addCardToDeck()
          + mixDeck()
          - getRandomIntInRangeInclusive()
      }
    }
  }
  

  package com.bogdan.kolomiiets.tasks {
    package com.bogdan.kolomiiets.tasks.Task_09_Game21 {
      class Computer {
      }
    }
  }
  

  package com.bogdan.kolomiiets.tasks {
    package com.bogdan.kolomiiets.tasks.Task_09_Game21 {
      interface Gamers {
      }
    }
  }
  

  package com.bogdan.kolomiiets.tasks {
    package com.bogdan.kolomiiets.tasks.Task_09_Game21 {
      class Main {
          {static} + main()
      }
    }
  }
  

  package com.bogdan.kolomiiets.tasks {
    package com.bogdan.kolomiiets.tasks.Task_09_Game21 {
      enum PlayingCards {
        JACK
        QUEEN
        KING
        SIX
        SEVEN
        EIGHT
        NINE
        TEN
        ACE
      }
    }
  }
  

  package com.bogdan.kolomiiets.tasks {
    package com.bogdan.kolomiiets.tasks.Task_09_Game21 {
      class User {
      }
    }
  }
  

  Computer -up-|> Gamers
  User -up-|> Gamers


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
